# mcp-slack-lists

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
api/: index.py
examples/: claude_desktop_config.json  usage_examples.py
src/: http_server.py  slack_lists_server.py  slack_lists_server.py.save
tests/: test_server.py
