[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "slack-lists-mcp-server"
version = "1.0.0"
description = "A Model Context Protocol (MCP) server for Slack Lists integration"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "MCP Slack Lists Server", email = "mcp@example.com"}
]
maintainers = [
    {name = "MCP Slack Lists Server", email = "mcp@example.com"}
]
keywords = ["mcp", "slack", "lists", "ai", "assistant", "protocol"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Communications :: Chat",
    "Topic :: Office/Business :: Groupware",
]
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.2.0",
    "httpx>=0.25.0",
    "typing-extensions>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]
logging = [
    "structlog>=23.0.0",
]

[project.urls]
Homepage = "https://github.com/your-org/slack-lists-mcp-server"
Documentation = "https://github.com/your-org/slack-lists-mcp-server#readme"
Repository = "https://github.com/your-org/slack-lists-mcp-server.git"
Issues = "https://github.com/your-org/slack-lists-mcp-server/issues"

[project.scripts]
slack-lists-mcp = "slack_lists_server:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 100
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers"
testpaths = [
    "tests",
]
asyncio_mode = "auto"

[tool.flake8]
max-line-length = 100
extend-ignore = ["E203", "W503"]
exclude = [
    ".git",
    "__pycache__",
    ".venv",
    "build",
    "dist",
]

